--- a/.github/workflows/Build_X86_64[个人双开版].yml
+++ b/.github/workflows/Build_X86_64[个人双开版].yml
@@ -298,13 +298,13 @@ jobs:
       uses: ncipollo/release-action@v1
       if: env.UPLOAD_RELEASE == 'true' && steps.compile.outputs.status == 'success'
       with:
-        name: ${{ env.DATE }} 🔴「 ${{ env.FILE_NAME }}_${{ env.KERNEL }} 」[个人双开版]
+        name: ${{ env.DATE }} 🔴「 ${{ env.FILE_NAME }}_${{ env.KERNEL }}[个人双开版] 」固件
         allowUpdates: true
         removeArtifacts: true
         tag: ${{ env.TAG }}8_${{ env.KERNEL }}
         token: ${{ secrets.GH_TOKEN }}
         body: |
-          - ⭐️此为 ${{ env.FILE_NAME }}_${{ env.KERNEL }} 固件
+          - ⭐️此为 ${{ env.FILE_NAME }}_${{ env.KERNEL }}[个人双开版] 固件
           - 🔴【个人双开版方便不用改ip】
           - 🔴默认IP：192.168.8.5 默认密码：无密码
           - 当前使用版本:【编译前的最后一次[➦主源码](https://github.com/coolsnowwolf/lede)更新记录】
@@ -330,7 +330,7 @@ jobs:
     - name: Telegram or Push notification
       run: |
         MSG="
-        ♨️${{ env.FILE_NAME }}_${{ env.KERNEL }}【个人双开版】编译完成
+        ♨️${{ env.FILE_NAME }}_${{ env.KERNEL }}[个人双开版]编译完成
         开始时间：${{ env.DATE }}
         完成时间：${{ env.DATE1 }}
         编译耗时：${{ env.time }}
@@ -558,13 +558,13 @@ jobs:
       uses: ncipollo/release-action@v1
       if: env.UPLOAD_RELEASE == 'true' && steps.compile.outputs.status == 'success'
       with:
-        name: ${{ env.DATE }} 🔴「 ${{ env.FILE_NAME }}_${{ env.KERNEL }} 」[个人双开版]
+        name: ${{ env.DATE }} 🔴「 ${{ env.FILE_NAME }}_${{ env.KERNEL }}[个人双开版] 」固件
         allowUpdates: true
         removeArtifacts: true
         tag: ${{ env.TAG }}8_${{ env.KERNEL }}
         token: ${{ secrets.GH_TOKEN }}
         body: |
-          - ⭐️此为 ${{ env.FILE_NAME }}_${{ env.KERNEL }} 固件
+          - ⭐️此为 ${{ env.FILE_NAME }}_${{ env.KERNEL }}[个人双开版] 固件
           - 🔴【个人双开版方便不用改ip】
           - 🔴默认IP：192.168.8.5 默认密码：无密码
           - 当前使用版本:【编译前的最后一次[➦主源码](https://github.com/coolsnowwolf/lede)更新记录】
@@ -590,7 +590,7 @@ jobs:
     - name: Telegram or Push notification
       run: |
         MSG="
-        ♨️${{ env.FILE_NAME }}_${{ env.KERNEL }}【个人双开版】编译完成
+        ♨️${{ env.FILE_NAME }}_${{ env.KERNEL }}[个人双开版]编译完成
         开始时间：${{ env.DATE }}
         完成时间：${{ env.DATE1 }}
         编译耗时：${{ env.time }}
