--- a/.github/workflows/Build_X86_64[5gMK].yml
+++ b/.github/workflows/Build_X86_64[5gMK].yml
@@ -299,13 +299,13 @@ jobs:
       uses: ncipollo/release-action@v1
       if: env.UPLOAD_RELEASE == 'true' && steps.compile.outputs.status == 'success'
       with:
-        name: ${{ env.DATE }} 🐳「 ${{ env.FILE_NAME }}_${{ env.KERNEL }}[5gMK] 」固件
+        name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }}_${{ env.KERNEL }}[5gMK] 」固件
         allowUpdates: true
         removeArtifacts: true
         tag: ${{ env.TAG }}7_${{ env.KERNEL }}
         token: ${{ secrets.GH_TOKEN }}
         body: |
-          - ⭐️此为 🐳${{ env.FILE_NAME }}_${{ env.KERNEL }}[5gMK] 固件
+          - ⭐️此为 ${{ env.FILE_NAME }}_${{ env.KERNEL }}[5gMK] 固件
           - 🔴默认IP：192.168.8.3 默认密码：无密码
           - 当前使用版本:【编译前的最后一次[➦主源码](https://github.com/coolsnowwolf/lede)更新记录】
           - ★ 感谢源码作者无私分享！
@@ -330,7 +330,7 @@ jobs:
     - name: Telegram or Push notification
       run: |
         MSG="
-        ♨️ 🐳${{ env.FILE_NAME }}_${{ env.KERNEL }}[5gMK]编译完成
+        ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}[5gMK]编译完成
         开始时间：${{ env.DATE }}
         完成时间：${{ env.DATE1 }}
         编译耗时：${{ env.time }}
@@ -558,13 +558,13 @@ jobs:
       uses: ncipollo/release-action@v1
       if: env.UPLOAD_RELEASE == 'true' && steps.compile.outputs.status == 'success'
       with:
-        name: ${{ env.DATE }} 🐳「 ${{ env.FILE_NAME }}_${{ env.KERNEL }}[5gMK] 」固件
+        name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }}_${{ env.KERNEL }}[5gMK] 」固件
         allowUpdates: true
         removeArtifacts: true
         tag: ${{ env.TAG }}7_${{ env.KERNEL }}
         token: ${{ secrets.GH_TOKEN }}
         body: |
-          - ⭐️此为 🐳${{ env.FILE_NAME }}_${{ env.KERNEL }}[5gMK] 固件
+          - ⭐️此为 ${{ env.FILE_NAME }}_${{ env.KERNEL }}[5gMK] 固件
           - 🔴默认IP：192.168.8.3 默认密码：无密码
           - 当前使用版本:【编译前的最后一次[➦主源码](https://github.com/coolsnowwolf/lede)更新记录】
           - ★ 感谢源码作者无私分享！
@@ -589,7 +589,7 @@ jobs:
     - name: Telegram or Push notification
       run: |
         MSG="
-        ♨️ 🐳${{ env.FILE_NAME }}_${{ env.KERNEL }}[5gMK]编译完成
+        ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}[5gMK]编译完成
         开始时间：${{ env.DATE }}
         完成时间：${{ env.DATE1 }}
         编译耗时：${{ env.time }}
