--- a/.github/workflows/Build_X86_64[个人双开版].yml
+++ b/.github/workflows/Build_X86_64[个人双开版].yml
@@ -267,7 +267,7 @@ jobs:
       uses: actions/upload-artifact@main
       if: env.UPLOAD_CONFIG == 'true' && steps.compile.outputs.status == 'success'
       with:
-        name: x86-config
+        name: x86-5.4-config
         path: ./artifact/buildinfo/
 
     - name: Delete files
@@ -527,7 +527,7 @@ jobs:
       uses: actions/upload-artifact@main
       if: env.UPLOAD_CONFIG == 'true' && steps.compile.outputs.status == 'success'
       with:
-        name: x86-config
+        name: x86-5.15-config
         path: ./artifact/buildinfo/
 
     - name: Delete files
