--- a/.github/workflows/Build_X86_64[Docker].yml
+++ b/.github/workflows/Build_X86_64[Docker].yml
@@ -27,7 +27,7 @@ on:
         required: false
         default: 'false'
   schedule:
-    - cron: 50 18 * * *
+    - cron: 50 18 */2 * *
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
