--- a/armv8/armv8.config
+++ b/armv8/armv8.config
@@ -5207,6 +5207,7 @@ CONFIG_LUCI_LANG_zh-cn=y
 # end of Translations
 
 CONFIG_PACKAGE_luci-compat=y
+CONFIG_PACKAGE_luci-lua-runtime=y
 CONFIG_PACKAGE_luci-mod-admin-full=y
 # CONFIG_PACKAGE_luci-mod-failsafe is not set
 # CONFIG_PACKAGE_luci-mod-rpc is not set
@@ -5411,8 +5412,9 @@ CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Server=y
 # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray is not set
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ChinaDNS_NG=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_MosDNS=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Hysteria=y
-# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Tuci_Client is not set
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Tuic_Client is not set
 # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadow_TLS is not set
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_IPT2Socks=y
 # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun is not set
@@ -6865,7 +6867,6 @@ CONFIG_SING_BOX_WITH_ECH=y
 # CONFIG_SING_BOX_WITH_GVISOR is not set
 CONFIG_SING_BOX_WITH_QUIC=y
 # CONFIG_SING_BOX_WITH_REALITY_SERVER is not set
-# CONFIG_SING_BOX_WITH_SHADOWSOCKSR is not set
 CONFIG_SING_BOX_WITH_UTLS=y
 # CONFIG_SING_BOX_WITH_V2RAY_API is not set
 CONFIG_SING_BOX_WITH_WIREGUARD=y
