--- a/.github/workflows/Build_X86_64.yml
+++ b/.github/workflows/Build_X86_64.yml
@@ -1393,7 +1393,7 @@ jobs:
 # //////////////////////////////////////////////////////////////////////////////////////////////
   Cleaning:
     if: ${{ always() }}
-    needs: [Checka,Build_x86_64_54,Build_x86_64_510,Build_x86_64_515,Build_x86_64_61]
+    needs: [Checka,Build_x86_64_54,Build_x86_64_510,Build_x86_64_515,Build_x86_64_61,Build_x86_64_66]
     runs-on: ubuntu-latest
     steps:
     - name: Delete workflow runs
